--- a/modulo-04/ex026/mq002/estilos/paisagem.css
+++ b/modulo-04/ex026/mq002/estilos/paisagem.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
 
-/* Configurações gerais */
+/* Landscape */
 
+body {
+    background-image: url(../imagens/cev-landscape.jpg);
+    background-position: left bottom;
+}
